--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,12 +2,13 @@
 
 /* Import Bootstrap SCSS file */
 @import "bootstrap/scss/bootstrap";
+// @import "../node_modules/bootstrap/scss/bootstrap";
 
 /* Import font family */
 @import url("https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500&display=swap");
 
 /* Import Angular Material */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+// @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 body {
   background-color: global.$primary-color;
