--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,18 +1,27 @@
 <div class="project-grid-container">
   <div class="row justify-content-around">
-    <mat-card
+    <div
       *ngFor="let project of projects"
-      class="project-card col-xs-12 col-lg-5"
+      class="card project-card col-xs-12 col-lg-5"
     >
-      <mat-card-header>
-        <h4>{{ project.title }}</h4>
-      </mat-card-header>
-      <mat-card-content>
+      <div class="card-body">
+        <h4 class="card-title">
+          <i>{{ project.title }}</i>
+        </h4>
         <p>{{ project.description }}</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <a *ngIf="project.link" [href]="project.link">See More</a>
-      </mat-card-actions>
-    </mat-card>
+        <button
+          class="btn"
+          *ngIf="project.link"
+          (click)="onGitHubLinkClick(project.link)"
+        >
+          <img
+            class="bi bi-github github-icon"
+            src="../../../assets/img/github.svg"
+            alt="GitHub"
+          />
+          GitHub
+        </button>
+      </div>
+    </div>
   </div>
 </div>
