--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -15,7 +15,7 @@
           (click)="onGitHubLinkClick(project.link)"
         >
           <img
-            class="bi bi-github github-icon"
+            class="bi github-icon"
             src="../../../assets/img/github.svg"
             alt="GitHub"
           />
