--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <ul ngbNav class="nav-item-list">
     <li routerLink="projects">Projects</li>
     <li routerLink="about">About</li>
+    <li routerLink="contact">Contact</li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
