--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,6 +12,7 @@
     padding: 5px;
     border: 0px;
     border-radius: 5px;
+    font-size: large;
     transition: background-color 0.5s ease-out;
     cursor: pointer;
   }
