--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -4,6 +4,30 @@
   // top | horiz | bottom
   margin: 1em 1em 0;
   background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 40%;
+}
+
+.contact-page-content {
+  padding: 1em;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.contact-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  label {
+    font-size: larger;
+  }
 }
 
 .icon {
@@ -16,6 +40,7 @@
 .btn {
   display: flex;
   align-items: center;
+  width: fit-content;
   background-color: global.$tertiary-color;
   --bs-btn-color: var(--bs-white);
   --bs-btn-hover-color: var(--bs-white);
@@ -23,4 +48,9 @@
 
 .btn:hover {
   background-color: rgba(global.$tertiary-color, 0.8);
+}
+
+label,
+p {
+  text-align: center;
 }
