--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -1,14 +1,24 @@
 @use "../../../scss/variables" as global;
 
+.page {
+  margin: 1em 1em 0;
+}
+
 .contact-page {
   // top | horiz | bottom
-  margin: 1em 1em 0;
-  background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 40%;
+  height: fit-content;
+  background-color: white;
+  border: 0px solid black;
+  border-radius: 8px;
+}
+
+.page-title {
+  margin-bottom: 0.75em;
+  text-align: center;
 }
 
 .contact-page-content {
@@ -24,10 +34,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  label {
-    font-size: larger;
-  }
 }
 
 .icon {
@@ -51,6 +57,17 @@
 }
 
 label,
-p {
+p,
+.btn {
   text-align: center;
+  font-size: larger;
+
+  @media (max-width: 700px) {
+    font-size: 3vw;
+  }
+}
+
+.email-blurb {
+  // vertical | horizontal
+  margin: 0.5em;
 }
