--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -1,10 +1,18 @@
 @use "../../../scss/variables" as global;
 
+.projects-page {
+  margin: 1em 1em 0em;
+}
+
+.page-title {
+  margin-bottom: 0.75em;
+  text-align: center;
+}
+
 .project-grid-container {
   display: flex;
   justify-content: center;
   width: 100%;
-  margin-top: 1.5em;
 }
 
 .row {
